<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="loading">Loading..</string>
    <string name="kmh">- km/h</string>
    <string name="percent">- %</string>
    <string name="o">o</string>
    <string name="image_pin">image pin</string>
    <string name="image_edit">image edit</string>
    <string name="image_main">image main</string>
    <string name="image_wind">image wind</string>
    <string name="image_humid">image humid</string>
    <string name="select_location">Select Location</string>
    <string name="fab">fab</string>
    <string name="find_me">Find Me</string>
    <string name="hyphen">-</string>
</resources>