<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        tools:context=".frag.EditFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:textColorHint="#29605F"
            app:boxStrokeColor="#29605F"
            app:endIconTint="#29605F"
            app:hintTextColor="#29605F"
            app:layout_constraintEnd_toStartOf="@+id/fabSelect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_loc">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoTextCities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_location"
                android:textColorHint="@color/main_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#29605F"
            android:clickable="true"
            android:contentDescription="@string/fab"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:shapeAppearanceOverlay="@style/rounded_fab"
            app:tint="#FFFEFE" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabFindMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/find_me"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="#29605F"
            app:icon="@drawable/ic_near"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_near" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>